--- a/Resources/Prototypes/_CP14/Recipes/Cooking/food_sequence_elements.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Cooking/food_sequence_elements.yml
@@ -32,6 +32,15 @@
     state: plate3
 
 - type: foodSequenceElement
+  id: CP14PlateTomatoesSlice
+  name: cp14-food-sequence-plate-tomatoes
+  sprites:
+  - sprite: _CP14/Objects/Flora/Farm/tomatoes.rsi
+    state: plate1
+  - sprite: _CP14/Objects/Flora/Farm/tomatoes.rsi
+    state: plate2
+
+- type: foodSequenceElement
   id: CP14PlateCheeseSlice
   name: cp14-food-sequence-plate-cheese
   sprites:
