--- a/Resources/Prototypes/_CP14/Reagents/Biological/animal_origin.yml
+++ b/Resources/Prototypes/_CP14/Reagents/Biological/animal_origin.yml
@@ -18,7 +18,7 @@
       - !type:GenericStatusEffect
         conditions:
         - !type:ReagentThreshold
-          reagent: CP14SleepyPoison
+          reagent: CP14WhistlerPoison
           min: 8
         key: ForcedSleep
         component: ForcedSleeping
